# gunday

./: Cargo.toml  README.md  build-wasm.sh  build.rs  dev.sh
.cargo/: config.toml
.github/workflows/: deploy.yml
page/: .gitignore  easter.js  egg-status.js  er-countdown.js  index.html  style.css
src/: assets.rs  audio.rs  collision.rs  components.rs  constants.rs  game_state.rs  lib.rs  main.rs  soundtrack.rs  spawn.rs  systems.rs  web_console.rs
src/boss/: boss_absorb_player_projectiles_system.rs  boss_arm_animation_system.rs  boss_explosion_system.rs  boss_head_animation_system.rs  boss_head_hit_system.rs  boss_spine_hit_animation_system.rs  boss_spine_hit_system.rs  boss_sprite_flip_system.rs  boss_stage1_movement_system.rs  boss_stage1_shooting_system.rs  boss_stage2_animation_system.rs  boss_stage2_movement_system.rs  boss_torso_animation_system.rs  boss_transition_to_stage2_system.rs  components.rs  config.rs  events.rs  mod.rs  setup_boss.rs  spawn_system.rs  systems.rs  util.rs
src/effects/: explosion_anim.rs  mod.rs
src/enemy_a/: config.rs  infected.rs  mod.rs  robot_animation_system.rs  robot_behavior_system.rs  robot_components.rs  robot_death_anim_system.rs  robot_despawn_system.rs  robot_hit_system.rs  robot_projectile_system.rs  robot_spawn_protection_system.rs
src/enemy_b/: animation_system.rs  behavior_system.rs  components.rs  config.rs  death_anim_system.rs  explosion_system.rs  grenade_system.rs  hit_system.rs  mod.rs
src/enemy_c/: animation_system.rs  behavior_system.rs  components.rs  config.rs  death_system.rs  hit_system.rs  mod.rs  movement_system.rs  spawn_system.rs
src/miniboss/: animation_system.rs  mod.rs  (+10 more)
(+27 files in other folders)
